[tool.poetry]
name = "paymaster"
version = "0.1.0"
description = ""
authors = ["idilettant <dedenev.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy = "^0.910"
pre-commit = "^2.15.0"
wemake-python-styleguide = "^0.15.3"
pytest-asyncio = "^0.16.0"
pook = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
