[tool.poetry]
name = "paymaster"
version = "0.1.0"
description = ""
authors = ["idilettant <dedenev.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
asyncpg = "^0.24.0"
python-dotenv = "^0.19.2"
httpx = "^0.21.1"
yoyo-migrations = "^7.3.2"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy = "^0.910"
pre-commit = "^2.15.0"
wemake-python-styleguide = "^0.15.3"
pytest-asyncio = "^0.16.0"
testcontainers = "^3.4.2"
asgi-lifespan = "^1.0.1"
psycopg2-binary = "^2.9.2"
pytest-httpx = "^0.15.0"
SQLAlchemy = "^1.4.27"
types-PyYAML = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
